charts/mcphub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mcphub
    service: mcphub
  name: mcphub
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mcphub
      service: mcphub
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mcphub
        service: mcphub
    spec:
      containers:
        - name: mcphub
          image: samanhappy/mcphub
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
          volumeMounts:
            - mountPath: /app/data
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mcphub
