charts/mcphub/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mcphub
  name: mcphub
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    service: mcphub
