charts/mcphub/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcphub
spec:
  hostnames:
    - mcp.int.imdevinc.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mcphub
          namespace: mcphub
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
